Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9609

[C++] CSV datasets don't materialize virtual columns

    XMLWordPrintableJSON

Details

    Description

      They're included but the values are all null.

      Minimal reproducer in R:

      library(arrow)
      dir.create("testds/c=5", recursive = TRUE)
      cat("a,b\n1,2\n", file = "testds/c=5/test.csv")
      ds <- open_dataset("testds", format = "csv")
      ds
      ## FileSystemDataset with 1 csv file
      ## a: int64
      ## b: int64
      ## c: int32
      dplyr::collect(ds)
      ## # A tibble: 1 x 3
      ##       a     b     c
      ##   <int> <int> <int>
      ## 1     1     2    NA
      

       

      Attachments

        Issue Links

          Activity

            People

              bkietz Ben Kietzman
              npr Neal Richardson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m