ARROW-9609: [C++][Dataset] CSV reading produces empty columns